2014-05-14  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/grupos/configurar_grupo.php: Show
	inventory name.

2014-05-14  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  operation/leads/lead_detail.php
	  operation/leads/lead_pipeline.php
	  operation/newsletter/address_definition.php
	  operation/newsletter/newsletter_definition.php: Improvements
	in leads. Added 'executive overview' and 'alarm'.

	* extras/mr/9.sql: Added file.

2014-05-13  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/setup_mail.php
	  include/functions_config.php
	  include/integria_cron.php
	  include/smtp_validate_email.php
	  operation/newsletter/address_definition.php
	  operation/newsletter/newsletter_definition.php: Improvements
	in newsletters. Changed email address validation.

2014-05-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_graph.php: Fixed a php warning caused
	by a deprecated use of a function.

2014-05-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_graph.php,
	  include/graphs/functions_fsgraph.php: Fixed the periods
	between the dates of the open/closed tickets graph.

2014-05-07  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/setup_mail.php
	  include/functions_config.php
	  include/integria_cron.php
	  operation/newsletter/address_definition.php
	  operation/newsletter/issue_definition.php
	  operation/newsletter/newsletter_definition.php: Improvements
	in newsletters.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/newsletter/issue_creation.php: Fixes and
	improvements on the TinyMCE editor. Added an option
	to enable or disable the TinyMCE editor.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/leads/lead_detail.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php: Improved the
	not owned leads filter.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
