@@ -17,8 +17,8 @@
 global $config;
 
 // Integria version
-$config["build"]="131119";
-$config["version"]="4.0";
+$config["build"]="140514";
+$config["version"]="4.1";
 $config["build_version"] = $config["build"];
 
 if (!isset($_SERVER["REMOTE_ADDR"]))
