@@ -1,5 +1,11 @@
 2014-05-14  Vanessa Gil <vanessa.gil@artica.es>
 	
+	* extras/mr/9.sql
+	  include/config_process.php
+	  operation/leads/lead_detail.php: Fixed bugs.
+
+2014-05-14  Vanessa Gil <vanessa.gil@artica.es>
+	
 	* godmode/grupos/configurar_grupo.php: Show
 	inventory name.
 
